--- a/tape_en_cours/J2.ipynb
+++ b/tape_en_cours/J2.ipynb
@@ -1077,8 +1077,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 166,
    "id": "39e77a84-01da-4623-9d02-ab57ac361bdf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "id(a) == id(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "id": "2bbe6fc5-c3ab-45ab-b5ab-af714bddba3c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[0;31mSignature:\u001b[0m \u001b[0mid\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m/\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+       "\u001b[0;31mDocstring:\u001b[0m\n",
+       "Return the identity of an object.\n",
+       "\n",
+       "This is guaranteed to be unique among simultaneously existing objects.\n",
+       "(CPython uses the object's memory address.)\n",
+       "\u001b[0;31mType:\u001b[0m      builtin_function_or_method"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "id?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82b2d071-65d6-415b-a74b-802d8106f87f",
    "metadata": {},
    "outputs": [],
    "source": []
