--- a/tape_en_cours/J2.ipynb
+++ b/tape_en_cours/J2.ipynb
@@ -1123,9 +1123,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5e8c8eda-4f45-407e-bdca-66d18115b328",
+   "metadata": {},
+   "source": [
+    "# Fonctions app"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "id": "82b2d071-65d6-415b-a74b-802d8106f87f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def addition(a, b):\n",
+    "    return a + b \n",
+    "\n",
+    "addition = lambda a, b: a + b "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82b2d071-65d6-415b-a74b-802d8106f87f",
+   "id": "d87d694c-e2c5-4b88-9b95-0771acb5062f",
    "metadata": {},
    "outputs": [],
    "source": []
