--- a/tape_en_cours/J2.ipynb
+++ b/tape_en_cours/J2.ipynb
@@ -1127,12 +1127,12 @@
    "id": "5e8c8eda-4f45-407e-bdca-66d18115b328",
    "metadata": {},
    "source": [
-    "# Fonctions app"
+    "# Fonctions lambdas "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 169,
    "id": "82b2d071-65d6-415b-a74b-802d8106f87f",
    "metadata": {},
    "outputs": [],
@@ -1145,8 +1145,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 170,
    "id": "d87d694c-e2c5-4b88-9b95-0771acb5062f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 2, 4, 6, 8]"
+      ]
+     },
+     "execution_count": 170,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(filter(lambda x: x % 2 == 0, range(10)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8edc785d-b137-41a4-928b-c375342a2d73",
    "metadata": {},
    "outputs": [],
    "source": []
