--- a/tape_en_cours/J2.ipynb
+++ b/tape_en_cours/J2.ipynb
@@ -1192,8 +1192,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 172,
    "id": "a4604060-cb6a-4b96-b360-0e809c47d0e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('a', 3), ('b', 2), ('c', 1)]"
+      ]
+     },
+     "execution_count": 172,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def champ(element):\n",
+    "    return \n",
+    "\n",
+    "donnees = [\n",
+    "    (\"b\", 2), \n",
+    "    (\"a\", 3),\n",
+    "    (\"c\", 1), \n",
+    "]\n",
+    "\n",
+    "sorted(donnees)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe8c613d-302f-4263-9576-ab55cbc86bc8",
    "metadata": {},
    "outputs": [],
    "source": []
