--- a/tape_en_cours/J2.ipynb
+++ b/tape_en_cours/J2.ipynb
@@ -1192,24 +1192,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 173,
    "id": "a4604060-cb6a-4b96-b360-0e809c47d0e4",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('b', 2)\n",
+      "('a', 3)\n",
+      "('c', 1)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "[('a', 3), ('b', 2), ('c', 1)]"
+       "[('c', 1), ('b', 2), ('a', 3)]"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 173,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def champ(element):\n",
-    "    return \n",
+    "def champ_tri(element):\n",
+    "    print(element)\n",
+    "    return element[1]\n",
     "\n",
     "donnees = [\n",
     "    (\"b\", 2), \n",
@@ -1217,7 +1227,7 @@
     "    (\"c\", 1), \n",
     "]\n",
     "\n",
-    "sorted(donnees)"
+    "sorted(donnees, key=champ_tri)"
    ]
   },
   {
