--- a/tape_en_cours/J2.ipynb
+++ b/tape_en_cours/J2.ipynb
@@ -1226,7 +1226,11 @@
    "id": "fe8c613d-302f-4263-9576-ab55cbc86bc8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def ajoute_avec(nombre):\n",
+    "    def ajouter(autre_nombre):\n",
+    "        return "
+   ]
   }
  ],
  "metadata": {
