--- a/tape_en_cours/J2.ipynb
+++ b/tape_en_cours/J2.ipynb
@@ -1222,14 +1222,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 176,
    "id": "fe8c613d-302f-4263-9576-ab55cbc86bc8",
    "metadata": {},
    "outputs": [],
    "source": [
     "def ajoute_avec(nombre):\n",
+    "    print(\"1\")\n",
     "    def ajouter(autre_nombre):\n",
-    "        return "
+    "        print(\"2\")\n",
+    "        return nombre + autre_nombre\n",
+    "    print(\"3\")\n",
+    "    return ajouter "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a04a3027-6dc1-42ab-a190-70e7556eca79",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ajoute_avec_10 = ajoute_avec(10)"
    ]
   }
  ],
