--- a/tape_en_cours/J2.ipynb
+++ b/tape_en_cours/J2.ipynb
@@ -1229,10 +1229,12 @@
    "source": [
     "def ajoute_avec(nombre):\n",
     "    print(\"1\")\n",
-    "    def ajouter(autre_nombre):\n",
+    "    def ajouter_autre(autre_nombre):\n",
     "        print(\"2\")\n",
-    "        return nombre + autre_nombre\n",
-    "    print(\"3\")\n",
+    "        def ajoute_encore_autre(encore_autre_nombre):\n",
+    "            print(\"3\")\n",
+    "            return nombre + autre_nombre + encore_autre_nombre\n",
+    "    print(\"4\")\n",
     "    return ajouter "
    ]
   },
