--- a/tape_en_cours/J2.ipynb
+++ b/tape_en_cours/J2.ipynb
@@ -1222,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 181,
    "id": "fe8c613d-302f-4263-9576-ab55cbc86bc8",
    "metadata": {},
    "outputs": [],
@@ -1234,13 +1234,14 @@
     "        def ajoute_encore_autre(encore_autre_nombre):\n",
     "            print(\"3\")\n",
     "            return nombre + autre_nombre + encore_autre_nombre\n",
+    "        return ajoute_encore_autre\n",
     "    print(\"4\")\n",
-    "    return ajouter "
+    "    return ajouter_autre "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 182,
    "id": "a04a3027-6dc1-42ab-a190-70e7556eca79",
    "metadata": {},
    "outputs": [
@@ -1249,7 +1250,7 @@
      "output_type": "stream",
      "text": [
       "1\n",
-      "3\n"
+      "4\n"
      ]
     }
    ],
@@ -1259,7 +1260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 183,
    "id": "0c7b292b-2816-481c-a3a2-216c2d8e5963",
    "metadata": {},
    "outputs": [
@@ -1273,10 +1274,10 @@
     {
      "data": {
       "text/plain": [
-       "15"
+       "<function __main__.ajoute_avec.<locals>.ajouter_autre.<locals>.ajoute_encore_autre(encore_autre_nombre)>"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1287,7 +1288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 184,
    "id": "7dbcd479-5e2c-48cf-9a66-ee81bb98b15d",
    "metadata": {},
    "outputs": [
@@ -1296,17 +1297,17 @@
      "output_type": "stream",
      "text": [
       "1\n",
-      "3\n",
+      "4\n",
       "2\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "15"
+       "<function __main__.ajoute_avec.<locals>.ajouter_autre.<locals>.ajoute_encore_autre(encore_autre_nombre)>"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 184,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1317,8 +1318,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 185,
    "id": "3222d828-9ba1-4449-9563-25a071a36d52",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "4\n",
+      "2\n",
+      "3\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "17"
+      ]
+     },
+     "execution_count": 185,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ajoute_avec(10)(5)(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "590cfff4-b7b4-414f-9c1a-8510699d7ce8",
    "metadata": {},
    "outputs": [],
    "source": []
