--- a/tape_en_cours/J2.ipynb
+++ b/tape_en_cours/J2.ipynb
@@ -1348,12 +1348,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "76089b93-6627-42dc-b948-1ed4844e95e6",
+   "metadata": {},
+   "source": [
+    "# Décorateur "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "590cfff4-b7b4-414f-9c1a-8510699d7ce8",
+   "id": "35dff65e-33fc-41f8-b20c-c221cde611e2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import time \n",
+    "\n",
+    "def timer(f):\n",
+    "    def wrapper():\n",
+    "        tic = time.time()\n",
+    "        res = f()\n",
+    "        tac = time.time()\n",
+    "        print(tac - tic)\n",
+    "        return res \n",
+    "    return wrapper \n",
+    "\n",
+    "\n",
+    "def f():\n",
+    "    time.sleep(1)\n",
+    "    return 2"
+   ]
   }
  ],
  "metadata": {
