--- a/tape_en_cours/J2.ipynb
+++ b/tape_en_cours/J2.ipynb
@@ -1357,7 +1357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 198,
    "id": "35dff65e-33fc-41f8-b20c-c221cde611e2",
    "metadata": {},
    "outputs": [],
@@ -1374,10 +1374,61 @@
     "    return wrapper \n",
     "\n",
     "\n",
+    "@timer\n",
     "def f():\n",
+    "    \"\"\"Ma fonction f\"\"\"\n",
     "    time.sleep(1)\n",
     "    return 2"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "id": "f4803ea1-ccb7-4012-8f8f-2dbbfb0a8668",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.002607822418213\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = f()\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
+   "id": "dc77733c-fd43-4694-8911-a5eaafd4c1eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function wrapper in module __main__:\n",
+      "\n",
+      "wrapper()\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9fdef396-2d00-46b7-b78b-85201878ccd1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
