--- a/tape_en_cours/J2.ipynb
+++ b/tape_en_cours/J2.ipynb
@@ -1357,24 +1357,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 207,
    "id": "35dff65e-33fc-41f8-b20c-c221cde611e2",
    "metadata": {},
    "outputs": [],
    "source": [
     "import time \n",
+    "import statistics\n",
     "\n",
     "def timer(f):\n",
     "    def wrapper():\n",
-    "        tic = time.time()\n",
-    "        res = f()\n",
-    "        tac = time.time()\n",
-    "        print(tac - tic)\n",
+    "        times = []\n",
+    "        for _ in range(10):\n",
+    "            tic = time.time()\n",
+    "            res = f()\n",
+    "            tac = time.time()\n",
+    "            times.append(tac-tic)\n",
+    "        print(statistics.mean(times), statistics.stdev(times))\n",
     "        return res \n",
     "    return wrapper \n",
     "\n",
     "\n",
-    "@timer\n",
+    "#@timer\n",
     "def f():\n",
     "    \"\"\"Ma fonction f\"\"\"\n",
     "    time.sleep(1)\n",
@@ -1383,7 +1387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 208,
    "id": "f4803ea1-ccb7-4012-8f8f-2dbbfb0a8668",
    "metadata": {},
    "outputs": [
@@ -1391,7 +1395,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.002607822418213\n",
       "2\n"
      ]
     }
@@ -1403,7 +1406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 209,
    "id": "dc77733c-fd43-4694-8911-a5eaafd4c1eb",
    "metadata": {},
    "outputs": [
@@ -1411,9 +1414,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Help on function wrapper in module __main__:\n",
+      "Help on function f in module __main__:\n",
       "\n",
-      "wrapper()\n",
+      "f()\n",
+      "    Ma fonction f\n",
       "\n"
      ]
     }
