--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -15,8 +15,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "75d16a99-8c58-48a1-bac3-e4e88bc57c4d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "66"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int(\"42\", base=16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "3a720699-d287-44bd-9b15-9f0ef80ca17b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[0;31mInit signature:\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m/\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+       "\u001b[0;31mDocstring:\u001b[0m     \n",
+       "int([x]) -> integer\n",
+       "int(x, base=10) -> integer\n",
+       "\n",
+       "Convert a number or string to an integer, or return 0 if no arguments\n",
+       "are given.  If x is a number, return x.__int__().  For floating point\n",
+       "numbers, this truncates towards zero.\n",
+       "\n",
+       "If x is not a number or if base is given, then x must be a string,\n",
+       "bytes, or bytearray instance representing an integer literal in the\n",
+       "given base.  The literal can be preceded by '+' or '-' and be surrounded\n",
+       "by whitespace.  The base defaults to 10.  Valid bases are 0 and 2-36.\n",
+       "Base 0 means to interpret the base from the string as an integer literal.\n",
+       ">>> int('0b100', base=0)\n",
+       "4\n",
+       "\u001b[0;31mType:\u001b[0m           type\n",
+       "\u001b[0;31mSubclasses:\u001b[0m     bool, IntEnum, IntFlag, _NamedIntConstant"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "int?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f0e4788-3efc-486c-a745-83e9d88a1d29",
    "metadata": {},
    "outputs": [],
    "source": []
