--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -73,8 +73,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "5f0e4788-3efc-486c-a745-83e9d88a1d29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_two = lambda number: int(number, base=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "057d7b4f-4973-4d9b-8264-e724b4755740",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "base_two(\"1111\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66a7010d-d22c-4eeb-a053-3a83b2f43417",
    "metadata": {},
    "outputs": [],
    "source": []
