--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -10,7 +10,8 @@
     "* programmation fonctionnelle\n",
     "    * les fonctions sont des variables comme les autres\n",
     "    * on va avoir des \"fonctions d'ordre supérieur\" (higher order functions) qui vont prendre en paramètre ou retourner des fonctions\n",
-    "    * "
+    "    * les décorateurs\n",
+    "        * permettre de modifier le comportement d'une fonction sans y toucher en "
    ]
   },
   {
