--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -11,7 +11,8 @@
     "    * les fonctions sont des variables comme les autres\n",
     "    * on va avoir des \"fonctions d'ordre supérieur\" (higher order functions) qui vont prendre en paramètre ou retourner des fonctions\n",
     "    * les décorateurs\n",
-    "        * permettre de modifier le comportement d'une fonction sans y toucher en "
+    "        * permettre de modifier le comportement d'une fonction sans y toucher en appelant du code avant ou après son exécution\n",
+    "        * "
    ]
   },
   {
