--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -105,12 +105,36 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "66a7010d-d22c-4eeb-a053-3a83b2f43417",
+   "cell_type": "markdown",
+   "id": "795b9d49-c7fe-4103-8157-d74e4ef0119d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "```python \n",
+    "@njit\n",
+    "def monte_carlo_pi(nsamples):\n",
+    "    acc = 0\n",
+    "    for i in range(nsamples):\n",
+    "        x = random.random()\n",
+    "        y = random.random()\n",
+    "        if (x ** 2 + y ** 2) < 1.0:\n",
+    "            acc += 1\n",
+    "    return 4.0 * acc / nsamples\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def monte_carlo_pi(nsamples):\n",
+    "    acc = 0\n",
+    "    for i in range(nsamples):\n",
+    "        x = random.random()\n",
+    "        y = random.random()\n",
+    "        if (x ** 2 + y ** 2) < 1.0:\n",
+    "            acc += 1\n",
+    "    return 4.0 * acc / nsamples\n",
+    "\n",
+    "monte_carlo_pi_jit\n",
+    "\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
