--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -131,7 +131,10 @@
     "            acc += 1\n",
     "    return 4.0 * acc / nsamples\n",
     "\n",
-    "monte_carlo_pi_jit\n",
+    "monte_carlo_pi_jitted = njit(monte_carlo_pi)\n",
+    "\n",
+    "if random() > 0.5:\n",
+    "    \n",
     "\n",
     "```"
    ]
