--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -131,13 +131,19 @@
     "            acc += 1\n",
     "    return 4.0 * acc / nsamples\n",
     "\n",
-    "monte_carlo_pi_jitted = njit(monte_carlo_pi)\n",
-    "\n",
-    "if random() > 0.5:\n",
-    "    \n",
+    "# on ne masque plus la fonction d'origine avec la fonction décorée\n",
+    "monte_carlo_pi_jitted = njit(monte_carlo_pi)    \n",
     "\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "81d2bc6e-9976-4ec8-88dc-ff8cb618c2c8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
