--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -7,12 +7,15 @@
    "source": [
     "# Rappel du jour précédent \n",
     "\n",
+    "\n",
     "* programmation fonctionnelle\n",
     "    * les fonctions sont des variables comme les autres\n",
     "    * on va avoir des \"fonctions d'ordre supérieur\" (higher order functions) qui vont prendre en paramètre ou retourner des fonctions\n",
+    "    * recoder `map` et `filter`\n",
     "    * les décorateurs\n",
     "        * permettre de modifier le comportement d'une fonction sans y toucher en appelant du code avant ou après son exécution\n",
-    "        * "
+    "        * sont utilisés pour séparer le code métier (dans la fonction) du code \"d'organisation\" (dans le décorateur)\n",
+    "    "
    ]
   },
   {
