--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -7,7 +7,8 @@
    "source": [
     "# Rappel du jour précédent \n",
     "\n",
-    "\n",
+    "* true / false values\n",
+    "    *  \n",
     "* programmation fonctionnelle\n",
     "    * les fonctions sont des variables comme les autres\n",
     "    * on va avoir des \"fonctions d'ordre supérieur\" (higher order functions) qui vont prendre en paramètre ou retourner des fonctions\n",
@@ -142,11 +143,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "81d2bc6e-9976-4ec8-88dc-ff8cb618c2c8",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vide\n",
+      "vide\n"
+     ]
+    }
+   ],
+   "source": [
+    "ma_liste = []\n",
+    "\n",
+    "# pas pythonique\n",
+    "if len(ma_liste) > 0:\n",
+    "    print(\"pas vide\")\n",
+    "else:\n",
+    "    print(\"vide\")\n",
+    "\n",
+    "if ma_liste:\n",
+    "    print(\"pas vide\")\n",
+    "else: \n",
+    "    print(\"vide\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91054436-ffac-466d-9db2-f9c046a27257",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "bool(ma_liste)"
+   ]
   }
  ],
  "metadata": {
