--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -165,7 +165,7 @@
     "else:\n",
     "    print(\"vide\")\n",
     "\n",
-    "if ma_liste:\n",
+    "if ma_liste:  # if bool(ma_liste):  # ma_liste.__bool__  \n",
     "    print(\"pas vide\")\n",
     "else: \n",
     "    print(\"vide\")"
@@ -173,13 +173,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "91054436-ffac-466d-9db2-f9c046a27257",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "bool(ma_liste)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "72ed62fd-9eaa-439e-a205-cfc45471ffd0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[0;31mInit signature:\u001b[0m \u001b[0mbool\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m/\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+       "\u001b[0;31mDocstring:\u001b[0m     \n",
+       "bool(x) -> bool\n",
+       "\n",
+       "Returns True when the argument x is true, False otherwise.\n",
+       "The builtins True and False are the only two instances of the class bool.\n",
+       "The class bool is a subclass of the class int, and cannot be subclassed.\n",
+       "\u001b[0;31mType:\u001b[0m           type\n",
+       "\u001b[0;31mSubclasses:\u001b[0m     "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "bool?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f4772f6-ac18-4aa8-815a-58c1e92468b4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
