--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -165,6 +165,7 @@
     "else:\n",
     "    print(\"vide\")\n",
     "\n",
+    "# pythonique \n",
     "if ma_liste:  # if bool(ma_liste):  # ma_liste.__bool__  \n",
     "    print(\"pas vide\")\n",
     "else: \n",
