--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -8,7 +8,7 @@
     "# Rappel du jour précédent \n",
     "\n",
     "* true / false values\n",
-    "    *  \n",
+    "    * \n",
     "* programmation fonctionnelle\n",
     "    * les fonctions sont des variables comme les autres\n",
     "    * on va avoir des \"fonctions d'ordre supérieur\" (higher order functions) qui vont prendre en paramètre ou retourner des fonctions\n",
@@ -166,7 +166,7 @@
     "    print(\"vide\")\n",
     "\n",
     "# pythonique \n",
-    "if ma_liste:  # if bool(ma_liste):  # ma_liste.__bool__  \n",
+    "if ma_liste:  # if bool(ma_liste):  # ma_liste.__bool__()  \n",
     "    print(\"pas vide\")\n",
     "else: \n",
     "    print(\"vide\")"
