--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -8,7 +8,8 @@
     "# Rappel du jour précédent \n",
     "\n",
     "* true / false values\n",
-    "    * \n",
+    "* en python quand on convertit les types (par exemple en `bool`) ce n'est pas la fonction de conversion qui va avoir la logique de conversion\n",
+    "    * la fonction de conversion va déléguer à la méthode magique du  \n",
     "* programmation fonctionnelle\n",
     "    * les fonctions sont des variables comme les autres\n",
     "    * on va avoir des \"fonctions d'ordre supérieur\" (higher order functions) qui vont prendre en paramètre ou retourner des fonctions\n",
