--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -10,7 +10,11 @@
     "* true / false values\n",
     "* en python quand on convertit les types (par exemple en `bool`) ce n'est pas la fonction de conversion qui va avoir la logique de conversion\n",
     "    * la fonction de conversion va déléguer à la méthode magique du type en cours\n",
-    "    * par exemple: `bool(liste)` ==> `liste.__bool__()` (il faut que mon type implémente la bonne méthode magique) \n",
+    "    * par exemple: `bool(liste)` ==> `liste.__bool__()` (il faut que mon type implémente la bonne méthode magique)\n",
+    "* différence entre `==` et `is`\n",
+    "    * `==` compare les valeurs\n",
+    "    * `is` compare les zones mémoires (pointeurs), à peu près équivalent à `id(a) == id(b)``\n",
+    "* `None` : a\n",
     "* programmation fonctionnelle\n",
     "    * les fonctions sont des variables comme les autres\n",
     "    * on va avoir des \"fonctions d'ordre supérieur\" (higher order functions) qui vont prendre en paramètre ou retourner des fonctions\n",
