--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -14,7 +14,8 @@
     "* différence entre `==` et `is`\n",
     "    * `==` compare les valeurs\n",
     "    * `is` compare les zones mémoires (pointeurs), à peu près équivalent à `id(a) == id(b)``\n",
-    "* `None` : a\n",
+    "* `None` : allocation vide (équivalent de `null` en java)\n",
+    "* pas de valeurs par défaut mutables dans les fonctions \n",
     "* programmation fonctionnelle\n",
     "    * les fonctions sont des variables comme les autres\n",
     "    * on va avoir des \"fonctions d'ordre supérieur\" (higher order functions) qui vont prendre en paramètre ou retourner des fonctions\n",
