--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -229,12 +229,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c641d692-1f63-4041-8869-127a454ba628",
+   "metadata": {},
+   "source": [
+    "# Décorateurs"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f4772f6-ac18-4aa8-815a-58c1e92468b4",
+   "id": "c915d806-72a9-452d-9eda-ce5329ea4a0b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import time \n",
+    "import statistics\n",
+    "\n",
+    "def timer(f):\n",
+    "    def wrapper():\n",
+    "        times = []\n",
+    "        for _ in range(10):\n",
+    "            tic = time.time()\n",
+    "            res = f()\n",
+    "            tac = time.time()\n",
+    "            times.append(tac-tic)\n",
+    "        print(statistics.mean(times), statistics.stdev(times))\n",
+    "        return res \n",
+    "    return wrapper \n",
+    "\n",
+    "\n",
+    "@timer\n",
+    "def f():\n",
+    "    \"\"\"Ma fonction f\"\"\"\n",
+    "    time.sleep(1)\n",
+    "    return 2\n",
+    "\n",
+    "@timer\n",
+    "def f2(a):\n",
+    "    time.sleep(a)\n",
+    "    return a\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
