--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "c915d806-72a9-452d-9eda-ce5329ea4a0b",
    "metadata": {},
    "outputs": [],
@@ -249,7 +249,7 @@
     "def timer(f):\n",
     "    def wrapper():\n",
     "        times = []\n",
-    "        for _ in range(10):\n",
+    "        for _ in range(2):\n",
     "            tic = time.time()\n",
     "            res = f()\n",
     "            tac = time.time()\n",
@@ -271,6 +271,64 @@
     "    return a\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "93034b68-4b3a-4fe7-bf02-4a455be01354",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0041192770004272 0.001271991888058782\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "b3732f3b-c7d2-48b5-b8fb-3d7edd1f3d77",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "timer.<locals>.wrapper() takes 0 positional arguments but 1 was given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[17], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mf2\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m0.1\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mTypeError\u001b[0m: timer.<locals>.wrapper() takes 0 positional arguments but 1 was given"
+     ]
+    }
+   ],
+   "source": [
+    "f2(0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b5c71ca-f2e8-489a-92a8-6d83d6acd9be",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
