--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "c915d806-72a9-452d-9eda-ce5329ea4a0b",
    "metadata": {},
    "outputs": [],
@@ -247,11 +247,11 @@
     "import statistics\n",
     "\n",
     "def timer(f):\n",
-    "    def wrapper():\n",
+    "    def wrapper(param):\n",
     "        times = []\n",
     "        for _ in range(2):\n",
     "            tic = time.time()\n",
-    "            res = f()\n",
+    "            res = f(param)\n",
     "            tac = time.time()\n",
     "            times.append(tac-tic)\n",
     "        print(statistics.mean(times), statistics.stdev(times))\n",
@@ -274,26 +274,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "id": "93034b68-4b3a-4fe7-bf02-4a455be01354",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.0041192770004272 0.001271991888058782\n"
+     "ename": "TypeError",
+     "evalue": "timer.<locals>.wrapper() missing 1 required positional argument: 'param'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[20], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mf\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mTypeError\u001b[0m: timer.<locals>.wrapper() missing 1 required positional argument: 'param'"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -302,20 +296,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "b3732f3b-c7d2-48b5-b8fb-3d7edd1f3d77",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "timer.<locals>.wrapper() takes 0 positional arguments but 1 was given",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[17], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mf2\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m0.1\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mTypeError\u001b[0m: timer.<locals>.wrapper() takes 0 positional arguments but 1 was given"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.10440802574157715 0.00012441749680415918\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.1"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
