--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -11,6 +11,8 @@
     "* en python quand on convertit les types (par exemple en `bool`) ce n'est pas la fonction de conversion qui va avoir la logique de conversion\n",
     "    * la fonction de conversion va déléguer à la méthode magique du type en cours\n",
     "    * par exemple: `bool(liste)` ==> `liste.__bool__()` (il faut que mon type implémente la bonne méthode magique)\n",
+    "* `tuple unpacking` : `a, b = 1, 2`\n",
+    "* match / case (depuis python 3.10)\n",
     "* différence entre `==` et `is`\n",
     "    * `==` compare les valeurs\n",
     "    * `is` compare les zones mémoires (pointeurs), à peu près équivalent à `id(a) == id(b)``\n",
@@ -324,8 +326,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "0b5c71ca-f2e8-489a-92a8-6d83d6acd9be",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1 2\n",
+      "1 2 3 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(1)\n",
+    "print(1, 2)\n",
+    "print(1, 2, 3, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fbf1b782-2fa6-432e-ac6c-7523d837e94a",
    "metadata": {},
    "outputs": [],
    "source": []
