--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -348,8 +348,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "fbf1b782-2fa6-432e-ac6c-7523d837e94a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def g(a, *args, b): \n",
+    "    print(\"a\", a)\n",
+    "    print(\"b\", b)\n",
+    "    print(\"args\", args)\n",
+    "    print(\"-------\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "e4517ad0-45da-4211-91a5-f9235a97b032",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a 1\n",
+      "b 5\n",
+      "args (2, 3, 4)\n",
+      "-------\n"
+     ]
+    }
+   ],
+   "source": [
+    " g(1, 2, 3, 4, b=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "32263759-8ff9-4c35-bc16-6c954c4c646a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "[3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a, b, *args = 1, 2, 3, 4, 5\n",
+    "print(a)\n",
+    "print(b)\n",
+    "print(args)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1772ce8d-8486-4807-b932-5f670a065240",
    "metadata": {},
    "outputs": [],
    "source": []
