--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -410,7 +410,10 @@
    "id": "1772ce8d-8486-4807-b932-5f670a065240",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "nom   | prenom \n",
+    "Falce ï"
+   ]
   },
   {
    "cell_type": "code",
