--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -405,14 +405,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1772ce8d-8486-4807-b932-5f670a065240",
+   "cell_type": "markdown",
+   "id": "f6d584de-1008-42fd-99bd-fb69cc46f6f6",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "nom   | prenom \n",
-    "Falce ï"
+    "```\n",
+    "nom     | prenom \n",
+    "Falce   | Matthieu\n",
+    "Poirier | Cyrille\n",
+    "```"
    ]
   },
   {
@@ -421,7 +422,12 @@
    "id": "f671958a-fd7a-4124-bec8-9079632505b2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data = [\n",
+    "    {\"nom\": \"Falce\", \"prenom\": \"Matthieu\"}, \n",
+    "    {\"nom\": \"Falce\", \"prenom\": \"Matthieu\"}, \n",
+    "]"
+   ]
   }
  ],
  "metadata": {
