--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -348,12 +348,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 37,
    "id": "fbf1b782-2fa6-432e-ac6c-7523d837e94a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def g(a, *args, b): \n",
+    "def g(a, b=2, *args): \n",
     "    print(\"a\", a)\n",
     "    print(\"b\", b)\n",
     "    print(\"args\", args)\n",
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 39,
    "id": "e4517ad0-45da-4211-91a5-f9235a97b032",
    "metadata": {},
    "outputs": [
@@ -371,14 +371,14 @@
      "output_type": "stream",
      "text": [
       "a 1\n",
-      "b 5\n",
-      "args (2, 3, 4)\n",
+      "b 2\n",
+      "args (3, 4)\n",
       "-------\n"
      ]
     }
    ],
    "source": [
-    " g(1, 2, 3, 4, b=5)"
+    " g(1)"
    ]
   },
   {
