--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -249,11 +249,11 @@
     "import statistics\n",
     "\n",
     "def timer(f):\n",
-    "    def wrapper(param):\n",
+    "    def wrapper(*args):\n",
     "        times = []\n",
     "        for _ in range(2):\n",
     "            tic = time.time()\n",
-    "            res = f(param)\n",
+    "            res = f(args[0)\n",
     "            tac = time.time()\n",
     "            times.append(tac-tic)\n",
     "        print(statistics.mean(times), statistics.stdev(times))\n",
@@ -348,21 +348,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 43,
    "id": "fbf1b782-2fa6-432e-ac6c-7523d837e94a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def g(a, b=2, *args): \n",
+    "def g(a, b=2, *plop): \n",
     "    print(\"a\", a)\n",
     "    print(\"b\", b)\n",
-    "    print(\"args\", args)\n",
+    "    print(\"plop\", plop)\n",
     "    print(\"-------\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 44,
    "id": "e4517ad0-45da-4211-91a5-f9235a97b032",
    "metadata": {},
    "outputs": [
@@ -372,7 +372,7 @@
      "text": [
       "a 1\n",
       "b 2\n",
-      "args (3, 4)\n",
+      "plop ()\n",
       "-------\n"
      ]
     }
