--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -253,7 +253,7 @@
     "        times = []\n",
     "        for _ in range(2):\n",
     "            tic = time.time()\n",
-    "            res = f(args[0)\n",
+    "            res = f(*args)\n",
     "            tac = time.time()\n",
     "            times.append(tac-tic)\n",
     "        print(statistics.mean(times), statistics.stdev(times))\n",
@@ -504,7 +504,11 @@
    "id": "ad13c0cf-392c-4029-a037-51a2495f9f44",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    " liste_example = [1, 2, 3, 4, 5]\n",
+    " g(liste_example)\n",
+    " g(*liste_example)"
+   ]
   }
  ],
  "metadata": {
