--- a/tape_en_cours/J3.ipynb
+++ b/tape_en_cours/J3.ipynb
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 52,
    "id": "c915d806-72a9-452d-9eda-ce5329ea4a0b",
    "metadata": {},
    "outputs": [],
@@ -249,11 +249,11 @@
     "import statistics\n",
     "\n",
     "def timer(f):\n",
-    "    def wrapper(*args):\n",
+    "    def wrapper(a=None, *args):\n",
     "        times = []\n",
     "        for _ in range(2):\n",
     "            tic = time.time()\n",
-    "            res = f(*args)\n",
+    "            res = f(a=a, *args)\n",
     "            tac = time.time()\n",
     "            times.append(tac-tic)\n",
     "        print(statistics.mean(times), statistics.stdev(times))\n",
@@ -276,26 +276,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 53,
    "id": "93034b68-4b3a-4fe7-bf02-4a455be01354",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.0021053552627563 0.002680708152686904\n"
+     "ename": "TypeError",
+     "evalue": "f() got an unexpected keyword argument 'a'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[53], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mf\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[52], line 9\u001b[0m, in \u001b[0;36mtimer.<locals>.wrapper\u001b[0;34m(a, *args)\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m2\u001b[39m):\n\u001b[1;32m      8\u001b[0m     tic \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mtime()\n\u001b[0;32m----> 9\u001b[0m     res \u001b[38;5;241m=\u001b[39m \u001b[43mf\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     10\u001b[0m     tac \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mtime()\n\u001b[1;32m     11\u001b[0m     times\u001b[38;5;241m.\u001b[39mappend(tac\u001b[38;5;241m-\u001b[39mtic)\n",
+      "\u001b[0;31mTypeError\u001b[0m: f() got an unexpected keyword argument 'a'"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -304,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 54,
    "id": "b3732f3b-c7d2-48b5-b8fb-3d7edd1f3d77",
    "metadata": {},
    "outputs": [
@@ -312,7 +307,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.10334300994873047 0.0006531075645248139\n"
+      "0.10250997543334961 0.002787423973116488\n"
      ]
     },
     {
@@ -321,7 +316,7 @@
        "0.1"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,10 +327,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "977de13b-1a65-4bf4-bd6d-f93f6d0d2ac9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.2045915126800537 0.0006470384183392451\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.2"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "f2(a=0.2)"
    ]
@@ -508,11 +521,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "1ba1baf5-0eaa-462e-b052-8c589d12515e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1---2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(1, 2, sep=\"---\")"
+   ]
   },
   {
    "cell_type": "code",
